# Dyad

./: .travis.yml  README.md  dyad.cabal  install.bat
src/Control/: Dyad.hs
